--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<main class="main"></main>
-
-<router-outlet />
+<div class="wrapper">
+  <div class="header">
+    <app-header> </app-header>
+    <app-header-middle></app-header-middle>
+  </div>
+</div>
