--- a/src/app/components/header-middle/header-middle.component.html
+++ b/src/app/components/header-middle/header-middle.component.html
@@ -9,21 +9,18 @@
     </form>
     <div
       (mouseleave)="isShowed = false"
+      (mouseenter)="isShowed = true"
       class="header__phone-group phone-group"
     >
-      <div (mouseenter)="isShowed = true" class="phone-group__row">
+      <div class="phone-group__row">
         <mat-icon class="phone-group__icon">call</mat-icon>
         <span class="phone-group__phone">{{ phone }}</span>
       </div>
-      <a
-        class="phone-group__link"
-        *ngIf="isShowed"
-        [href]="phone"
-       
+      <a class="phone-group__link" *ngIf="isShowed" [href]="phone"
         >Call to you?</a
       >
     </div>
-    <div class="header__shop shop-header">
+    <button class="header__shop shop-header">
       <mat-icon class="shop-header__icon-shop" [matBadge]="amountOfItems"
         >shopping_cart</mat-icon
       >
@@ -31,6 +28,6 @@
         <h4 class="shop-header__title">{{ titleOfShop }}</h4>
         <span class="shop-header__amount-money">{{ amountMoney }}UAH</span>
       </div>
-    </div>
+    </button>
   </div>
 </section>
