--- a/src/app/components/header-middle/header-middle.component.scss
+++ b/src/app/components/header-middle/header-middle.component.scss
@@ -6,16 +6,19 @@
   &__container {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    min-height: 6rem;
   }
   &__icon-logo {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
   }
   &__logo {
     display: flex;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: 2rem;
     gap: 0.4rem;
   }
 
@@ -40,7 +43,17 @@
   }
 }
 .phone-group {
+  transition: all 0.2s ease;
   cursor: pointer;
+  padding: 1rem;
+  border-radius: 0.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+  &:hover {
+    box-shadow: 0 0 0.3rem #999;
+    background-color: #fff;
+  }
   &__row {
     display: flex;
     align-items: center;
@@ -49,6 +62,7 @@
   &__icon {
   }
   &__link {
+    color: rgb(0, 128, 255);
   }
   &__phone {
     font-size: 1.3rem;
@@ -57,7 +71,10 @@
 }
 .shop-header {
   display: flex;
-  gap: 0.4rem;
+  align-items: center;
+  gap: 1rem;
+  cursor: pointer;
+
   &__icon-shop {
   }
 
@@ -68,6 +85,7 @@
 
   &__title {
     font-size: 1rem;
+    margin: 0;
   }
 
   &__amount-money {
