--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 @use "@angular/material" as mat;
-@import "primeicons/primeicons.css";
 html {
   @include mat.theme(
     (
@@ -12,7 +11,7 @@ html {
       density: 0,
     )
   );
-} /* You can add global styles to this file, and also import other style files */
+}
 * {
   padding: 0px;
   margin: 0px;
