--- a/src/app/components/header-middle/header-middle.component.scss
+++ b/src/app/components/header-middle/header-middle.component.scss
@@ -8,9 +8,8 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: 2rem;
-    padding-top: 0.5rem;
+    padding-top: 1.5rem;
     padding-bottom: 0.5rem;
-    min-height: 6rem;
   }
   &__icon-logo {
     font-size: 1.5rem;
@@ -62,6 +61,9 @@
   &__icon {
   }
   &__link {
+    &.hidden {
+      visibility: hidden;
+    }
     color: rgb(0, 128, 255);
   }
   &__phone {
