--- a/src/app/components/popup-call/popup-call.component.html
+++ b/src/app/components/popup-call/popup-call.component.html
@@ -1,7 +1,9 @@
 <section class="pop-up">
   <form name="callBack" class="pop-up__content">
-    <h2 class="pop-up__title">{{ title }}</h2>
-    <p class="pop-up__text">{{ text }}</p>
+    <h2 class="pop-up__title">To call you back?</h2>
+    <p class="pop-up__text">
+      Enter your phone number and name.We will call you soon
+    </p>
     <label class="pop-up_name">
       Name
       <input type="text" name="name" />
@@ -12,7 +14,7 @@
     </label>
     <button class="pop-up__send" type="button">Send</button>
     <span class="pop-up_exit">
-      <mat-icon>close</mat-icon>
+      <mat-icon (click)="closePopUpCallMe.emit(false)">close</mat-icon>
     </span>
   </form>
 </section>
